feat(theme): implement centralized light and dark mode switching with persistent user preference